        - New way of defining displayed names in observer tree models through the new qti_prop_DISPLAYED_ALIAS_MAP property.
        - ObjectManager::exportObjectProperties() and importObjectProperties() were removed.
        - IModificationNotifier::setModificationState() got new parameter to force notifications to be emitted.

    Bug Fixes:
    - Fixed bug in SubjectTypeFilter::evaluateAttachment() in cases where inversed filtering was enabled and no known types were added.
    - Fixed bug where Observer ended a processing cycle before emitting the numberOfSubjectsChanged() signal.
    - Fixed memory leak in ActivityPolicyFilter destructor.
    - Fixed memory leak in ObserverRelationalTable destructor.
    - Fixed memory leak in SubjectFilterTemplate.
    - Fixed memory leak in SubjectTypeFilter.
    - Fixed bugs in Observer::treeCount(), Observer::treeChildren() and Observer::isParentInHierarchy() when using the containment tree building approach.
    - Fixed bug where ObserverRelationalTable did not remove qti_prop_VISITOR_ID properties in its destructor.
    - Fixed bug where Observer::exportXml() did not take the exportability property of subject filters into account. This resulted in subject filters always being exported.
    - Fixed bug where Observer::deleteAll() did not change the modification state of the observer.
    - Fixed bug in Observer where the QtilitiesPropertyChangeEvent for subject filter's monitoredProperties() were not delivered correctly.
    - Fixed internal handling of processing cycles in Observer. This could have caused user defined processing cycles to be ended incorrectly during some function calls such as attachSubjects() etc.
    - Fixed possible crash in ActivityPolicyFilter::setActiveSubjects() when called with null objects.
    - Fixed bug in Observer::importXml() where it could have passed invalid active subjects to activity policy filters if installed.