@@ -46,14 +46,12 @@ struct Qtilities::CoreGui::MenuContainerPrivateData {
    QMap<QString, QAction*> id_action_map;
 };
 
-Qtilities::CoreGui::MenuContainer::MenuContainer(const QString& name, QObject* parent) : ActionContainer(name, parent)
+Qtilities::CoreGui::MenuContainer::MenuContainer(const QString& name, QObject* parent) : ActionContainer(parent)
 {
     d = new MenuContainerPrivateData;
-    d->this_menu = new QMenu(container_name);
+    d->this_menu = new QMenu(name);
     setObjectName(name);
     d->this_menu->setObjectName(name);
-
-    setEmptyPolicy(ActionContainer::Disable);
 }
 
 Qtilities::CoreGui::MenuContainer::~MenuContainer() {
@@ -70,7 +68,6 @@ void Qtilities::CoreGui::MenuContainer::addAction(Command *command, const QStrin
         return;
 
     d->id_action_map[command->defaultText()] = command->action();
-    connect(command->action(),SIGNAL(changed()),SLOT(evaluateMenuActions()));
 
     // Find the action with the given default string.
     for (int i = 0; i < d->id_action_map.count(); i++) {
@@ -110,8 +107,6 @@ void Qtilities::CoreGui::MenuContainer::addMenu(ActionContainer *menu, const QSt
     if (!menu)
         return;
 
-    connect(menu->menu(),SIGNAL(aboutToHide()),SLOT(evaluateMenuActions()));
-
     // Find the action with the given string.
     for (int i = 0; i < d->id_action_map.count(); i++) {
         if (d->id_action_map.keys().at(i) == before) {
@@ -132,33 +127,6 @@ void Qtilities::CoreGui::MenuContainer::addMenu(ActionContainer *menu, const QSt
         d->this_menu->addMenu(menu->menu());
 }
 
-void Qtilities::CoreGui::MenuContainer::evaluateMenuActions() {
-    // We evaulate all sub menu and child action's. If they are all hidden, we hide this menu.
-    /*bool visible_item = false;
-    foreach (QAction* action, d->id_action_map.values()) {
-        if (action->isVisible()) {
-            visible_item = true;
-            break;
-        }
-    }
-
-    if (!visible_item) {
-        QMenu* sender_menu = qobject_cast<QMenu*> (sender());
-        for (int i = 0; i < d->sub_menus.count(); i++) {
-            if (d->sub_menus.at(i)->menu()->isVisible()) {
-                // Check that the visible menu is not the menu which emitted the aboutToHide() signal.
-                if (sender_menu == d->sub_menus.at(i)->menu())
-                    break;
-
-                visible_item = true;
-                break;
-            }
-        }
-    }
-
-    d->this_menu->setVisible(visible_item);*/
-}
-
 // --------------------------------
 // MenuBarContainer Implemenation
 // --------------------------------
@@ -169,12 +137,10 @@ struct Qtilities::CoreGui::MenuBarContainerPrivateData {
    QList<QPointer<ActionContainer> > menus;
 };
 
-Qtilities::CoreGui::MenuBarContainer::MenuBarContainer(QObject* parent) : ActionContainer(QString(), parent)
+Qtilities::CoreGui::MenuBarContainer::MenuBarContainer(QObject* parent) : ActionContainer(parent)
 {
     d = new MenuBarContainerPrivateData;
     d->this_menu_bar = new QMenuBar(0);
-
-    setEmptyPolicy(ActionContainer::None);
 }
 
 Qtilities::CoreGui::MenuBarContainer::~MenuBarContainer() {
